Add Trampoline for stack-safe recursion (#156)
- updated tests
- updated documentation
- added benchmarks